--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -24,14 +24,15 @@
     &__content {
       position: absolute;      
       top: 65%;
-      left: 64px;      
+      left: 24px;      
       z-index: 8;          
-      width: 100%;
-      max-height: 90vh;
-      overflow: auto;
+      width: auto;
+			max-width: 60vw;
+      max-height: 90vh;      
       border-radius: 10px;     
 			@include _576 {
 				top: 45%;
+				left: 64px;
 			} 
 		}
 		&__title {
@@ -42,6 +43,7 @@
 			color: $black-light;
 		}
 		&__text {
+			display: block;
 			margin: 0;
 		}
 }
